UPDATE API LOCAL